# Animation

./: Animation.cpp  Animation.h  AnimationListModel.cpp  AnimationListModel.h  AnimationTreeModel.cpp  AnimationTreeModel.h  CMakeLists.txt  ImportFbxSdk.cmake  ImportQGLViewer.cmake  Loader.cpp  Loader.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Model.cpp  Model.h  SafeGl.cpp  SafeGl.h  Skeleton.cpp  Skeleton.h  Viewer.cpp  Viewer.h  main.cpp
shaders/: frag.glsl  vert.glsl
